sort.pancake.BasicPancake.scala.error
Compilation error:
BasicPancake:12: error: '=' expected but identifier found.
def plusGrand(n : Int) x : Int = {
                       ^BasicPancake:26: error: illegal start of simple expression
}
^